# AMABot

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Main.cpp  README.md  config.h.in
include/amabot/: ApiAmaBot.hpp  Logger.hpp  Threadpool.hpp
python/: ApiCalls.py  Errors.py  Main.py  Models.py  server.py
python/Models/: ModelMain.py  TestModel.py
src/: AmaBot.cpp  Callbacks.cpp  Main.cpp  SlashCommands.cpp  Threadpool.cpp
